finished rust langauge ownership and borrowing

--- a/Memory Ownership and Borrowing in Rust 2021/.vscode/tasks.json
+++ b/Memory Ownership and Borrowing in Rust 2021/.vscode/tasks.json
@@ -12,6 +12,18 @@
 			"options": {
                 "cwd": "${workspaceFolder}/debugging"  // Ensure this is pointing to 'debugging'
             }
+		},
+		{
+			"type": "cargo",
+			"command": "clean",
+			"problemMatcher": [
+				"$rustc"
+			],
+			"group": "build",
+			"label": "rust: cargo clean",
+			"options": {
+                "cwd": "${workspaceFolder}/debugging"  // Ensure this is pointing to 'debugging'
+            }
 		}
 	]
 }
